--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,25 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+body {
+    text-align: center;
+    background-color: purple;
+    color: white;
+  }
+
+  h1 {
+      color: white;
+  }
+  
+  table {
+    margin: 0 auto;
+
+  }
+  
+  td, th, table {
+  
+    border: 1px solid black;
+    background-color: red;
+  }
+
